--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.0",
     "express": "^5.1.0",
+    "lucide-angular": "^0.545.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
