feat(header): implement header component with navigation and styling
- Added header HTML structure with navigation links and buttons for Login and Sign Up.
- Created SCSS styles for the header, including responsive design and hover effects.
- Implemented header component logic to handle scroll detection and dynamic class application.
- Added unit tests for the header component to ensure proper creation and functionality.

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "patientviewer-frontend": {
+    "jobshop-frontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -63,10 +63,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "patientviewer-frontend:build:production"
+              "buildTarget": "jobshop-frontend:build:production"
             },
             "development": {
-              "buildTarget": "patientviewer-frontend:build:development"
+              "buildTarget": "jobshop-frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
